asumptionの実装を後回しに
